--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,30 @@
 
   <body>
     <div class="container">
-     <% flash.each do |key, value| %>
-       <div class="alert alert-<%= key %>">
-         <%= image_tag 'x.png', class: 'x' %>
-         <h4 class="message"><%= value %></h4>
-       </div>
-     <% end %>
-   </div>
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>">
+          <%= image_tag 'x.png', class: 'x' %>
+          <h4 class="message"><%= value %></h4>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="container-fluid">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <ul>
+              <li><%= link_to "Add New Question",  new_question_path %></li>
+            </ul>
+          </div>
+          <div class="col-sm-6">
+            <ul id="main-nav">
+              <li><%= link_to "Log In", new_user_session_path %></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
