--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+
     <div class="container">
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>">
@@ -28,15 +29,20 @@
           </div>
           <div class="col-sm-6">
             <ul id="main-nav">
-              <li><%= link_to "Log In", new_user_session_path %></li>
+              <% if current_user %>
+                <li><%= current_user.name %></li>
+                <li><%= link_to "Log Out", destroy_user_session_path, method: 'delete' %></li>
+              <% else %>
+                <li><%= link_to "Log In", new_user_session_path %></li>
+              <% end %>
             </ul>
           </div>
         </div>
       </div>
     </div>
 
-    <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+
+
 
 
     <%= yield %>
