--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag questions_path %>
+<%= form_tag questions_path, multipart: true %>
 <div class="form-group">
   <%= label_tag "Enter Answer A" %>
   <%= text_field_tag "A" %>
