--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,14 +1,34 @@
-<h1>QUESTIONS</h1>
+<div class="container">
+  <h1>QUESTIONS</h1>
 
-<% if @questions.any? %>
-  <ul id="question-list">
+  <% if @questions.any? %>
+  <div id="question-list">
     <% @questions.each do |q| %>
     <div class="question-container">
-      <% q.answers.each do |a| %>
-      <%= image_tag a.image(:medium) %>
-      <li> <%= a.content %></li>
-      <% end %>
+      <h1 class="text-center"> WOULD YOU RATHER....</h1>
+      <div class="row question-row">
+
+
+        <div class="col-sm-5 answer-container">
+          <p>
+            <%= q.answers.first.content %>
+          </p>
+          <%= image_tag q.answers.first.image(:medium) %>
+        </div>
+        <div class="col-sm-2">
+          <h3 class="question-show text-center">OR</h3>
+          <h2 class="results text-center">RESULTS</h2>
+        </div>
+        <div class="col-sm-5 answer-container">
+          <p>
+            <%= q.answers.last.content %>
+          </p>
+          <%= image_tag q.answers.last.image(:medium) %>
+        </div>
+      </div>
+
     </div>
     <% end %>
-  </ul>
-<% end %>
+  </div>
+  <% end %>
+</div>
