--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
           <div class="col-sm-6">
             <ul class="main-nav">
               <li><%= link_to image_tag('barn.png'), root_path, class: 'barn' %></li>
-              <li><%= link_to "Add New Question",  new_question_path, remote: true %></li>
+              <% if current_user %>
+                <li><%= link_to "Add New Question",  new_question_path, remote: true %></li>
+              <% end %>
             </ul>
           </div>
           <div class="col-sm-6">
