fix voting for new question

--- a/app/views/questions/create.js.erb
+++ b/app/views/questions/create.js.erb
@@ -1,2 +1,2 @@
 $("#question_form").slideUp();
-// $("#question-list").append("<%= j render(@question) %>");
+$("#question-list").append("<%= j render(@question) %>");
