--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,4 @@
-<div class="container">
-  <h1>QUESTIONS</h1>
+<div class="container questions-container">
 
   <% if @questions.any? %>
   <div id="question-list">
@@ -7,7 +6,7 @@
     <div class="question-container">
       <h1 class="text-center"> WOULD YOU RATHER....</h1>
       <div class="row question-row">
-        <div id="answer<%=q.answers.first.id%>" class="col-sm-5 answer-container">
+        <div id="answer<%= q.answers.first.id %>" class="col-sm-5 answer-container">
           <p><%= q.answers.first.content %></p>
 
           <%= link_to image_tag(q.answers.first.image(:medium)), like_question_answer_path(q, q.answers.first), remote: true, method: :put %>
@@ -20,10 +19,10 @@
 
             <div class="results-div" id="results-q<%= q.id %>">
               <h2 class="results text-center">RESULTS</h2>
-              <div class="col-sm-6">
+              <div class="col-sm-6 text-center">
                 <%= q.answers.first.get_upvotes.size %>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-6 text-center">
                 <%= q.answers.last.get_upvotes.size %>
               </div>
             </div>
@@ -31,7 +30,7 @@
         </div>
 
 
-        <div id="answer<%=q.answers.last.id%>" class="col-sm-5 answer-container">
+        <div id="answer<%= q.answers.last.id %>" class="col-sm-5 answer-container">
           <p><%= q.answers.last.content %></p>
           <%= link_to image_tag(q.answers.last.image(:medium)), like_question_answer_path(q, q.answers.last), remote: true, method: :put %>
         </div>
