--- a/app/views/answers/upvote.js.erb
+++ b/app/views/answers/upvote.js.erb
@@ -1,3 +1,3 @@
 $("div#results-q<%= @question.id %>").show();
 
-toastr.info('<%= current_user.name %> voted! Democracy now! PS: We know the Russians made you do.')
+toastr.info('<%= current_user.name %> voted! <br> Democracy now! <br> PS: We know the Russians made you do it.')
